namespace Shared.DataTransferObjects.ResponseDTO
{
    public class ResponseMessage
    {
        public string Message { get; set; } = null!;
    }
}
