namespace Shared
{
    public record TokenDTO(string AccessToken, string RefreshToken);
}
